# rust_test_backend

./: .env  Cargo.toml
migrations/2021-05-25-124108_add_user_tables/: up.sql
src/: main.rs
src/db/: models.rs
src/routes/: mod.rs  route_error.rs
src/routes/v1/: auth_principal.rs  jwt_auth.rs  mod.rs
src/routes/v1/models/: user.rs
src/routes/v1/route_auth/: login.rs  mod.rs  signup.rs
src/routes/v1/route_user/: me.rs  mod.rs
src/utils/: mod.rs  string_functions.rs
