[package]
name = "demo_backend"
version = "0.1.0"
authors = ["Ashish Bhattarai <ashishbhattarai@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-web-httpauth = "0.5.1"
actix-http = "2.2.0"
diesel = { version = "1.4.5", features = ["postgres", "uuidv07", "r2d2"] }
log = "0.4.0"
env_logger = "0.8.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
futures-util = "0.3.15"
jwt = "0.13.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
hmac = "0.10"
sha2 = "0.9"
derive_more = "0.99.0"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
lazy_static = "1.4.0"
bcrypt = "0.8"